# Needle

./: .gitignore  DEPLOY.md  FREE_DEPLOYMENT_GUIDE.md  Makefile  PRODUCTION_CERTIFICATION.md  README.md  SECURITY_AUDIT.md  SENSITIVE_LOG_AUDIT.md  docker-compose.yml  mkdocs.yml  setup_oracle.sh
.github/workflows/: ci.yml  docs.yml
doc/: book.toml
doc/src/: SUMMARY.md  introduction.md  quick-start.md
doc/src/appendix/: faq.md  glossary.md  license.md
doc/src/developer-guide/: architecture.md  contributing.md
doc/src/operations/: deployment.md  monitoring.md  production-certification.md  security.md
doc/src/user-guide/: authentication.md  configuration.md  installation.md
doc/theme/: custom.css  head.html
docs/developer-guide/: api-reference.md  crate-overview.md  database-schema.md  testing.md
docs/operations/: deployment.md  production-certification.md  troubleshooting.md
docs/reference/: certificate.md
docs/stylesheets/: extra.css
docs/user-guide/: creating-tunnels.md  dashboard.md
libneedle/: .env.example  Cargo.toml  Dockerfile  schema.sql
libneedle/crates/needle-api/: Cargo.toml
libneedle/crates/needle-api/src/: lib.rs  state.rs
libneedle/crates/needle-api/src/middleware/: auth.rs  mod.rs  rate_limit.rs
libneedle/crates/needle-api/src/routes/: analytics.rs  api_keys.rs  auth.rs  health.rs  inspector.rs  metrics.rs  mod.rs  tunnels.rs
libneedle/crates/needle-common/: Cargo.toml
libneedle/crates/needle-common/src/: error.rs  lib.rs  rate_limit.rs  subdomain.rs
libneedle/crates/needle-core/: Cargo.toml
libneedle/crates/needle-core/src/: config.rs  lib.rs  metrics.rs
libneedle/crates/needle-core/src/proxy/: http.rs  mod.rs  websocket.rs
libneedle/crates/needle-core/src/ssh/: handler.rs  mod.rs  server.rs
libneedle/crates/needle-core/src/tunnel/: manager.rs  mod.rs
libneedle/crates/needle-db/: Cargo.toml
libneedle/crates/needle-db/src/: client.rs  lib.rs  models.rs
libneedle/crates/needle-db/src/queries/: analytics.rs  api_keys.rs  mod.rs  requests.rs  tunnels.rs  users.rs
libneedle/crates/needle-server/: Cargo.toml
libneedle/crates/needle-server/src/: main.rs
libneedle/tests/: integration.rs
needleui/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
needleui/src/: App.vue  main.ts  style.css
needleui/src/api/: index.ts
needleui/src/components/: Sidebar.vue
needleui/src/router/: index.ts
needleui/src/stores/: analytics.ts  auth.ts  inspector.ts  tunnels.ts
needleui/src/types/: index.ts
needleui/src/views/: Analytics.vue  Dashboard.vue  Inspector.vue  Login.vue  Register.vue  Settings.vue  TunnelDetail.vue  Tunnels.vue
