[package]
name = "needle-common"
description = "Shared types, errors, and utilities for the Needle tunneling service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
