[package]
name = "needle-core"
description = "Core SSH tunneling and proxy logic for the Needle service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
needle-common = { path = "../needle-common" }
needle-db = { path = "../needle-db" }
tokio = { workspace = true }
russh = { workspace = true }
russh-keys = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
tokio-tungstenite = { workspace = true }
