[package]
name = "needle-server"
description = "Entry point for the Needle SSH tunneling service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "needle"
path = "src/main.rs"

[dependencies]
needle-common = { path = "../needle-common" }
needle-db = { path = "../needle-db" }
needle-core = { path = "../needle-core" }
needle-api = { path = "../needle-api" }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
russh-keys = { workspace = true }
